--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,11 +15,17 @@ jobs:
 
         steps:
             - name: Get changes
-              run: |
-                ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
-                cd ${{ secrets.WORKDIR }}
-                git checkout master
-                git pull
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.SSH_HOST }}
+                username: ${{ secrets.SSH_USER }}
+                password: ${{ secrets.SSH_PRIVATE_KEY }}
+                port: ${{ secrets.SSH_PORT }}
+                script: |
+                  ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+                  cd ${{ secrets.WORKDIR }}
+                  git checkout master
+                  git pull
 
     publish:
         name: publish image
