--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,17 +16,21 @@ jobs:
         steps:
             - name: Get changes
               uses: appleboy/ssh-action@v1
+              env:
+                WORKDIR: ${{ secrets.WORKDIR }}
               with:
                 host: ${{ secrets.SSH_HOST }}
-                username: ${{ secrets.SSH_USER }}
+                username: ${{ secrets.USERNAME }}
                 password: ${{ secrets.SSH_PRIVATE_KEY }}
                 port: ${{ secrets.SSH_PORT }}
+                envs: WORKDIR
                 script: |
-                  cd ${{ secrets.WORKDIR }}
+                  cd $WORKDIR
                   git checkout master
                   git pull
 
     publish:
+        needs: pull
         name: publish image
         runs-on: ubuntu-latest
 
