--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ jobs:
               with:
                 host: ${{ secrets.SSH_HOST }}
                 username: ${{ secrets.USERNAME }}
-                password: ${{ secrets.SSH_PRIVATE_KEY }}
+                key: ${{ secrets.SSH_PRIVATE_KEY }}
                 port: 22
                 envs: WORKDIR
                 script: |
