--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -63,10 +63,10 @@ jobs:
                     BOT_TOKEN = ${{ secrets.BOT_TOKEN }} &&
                     MEGA_EMAIL = ${{ secrets.MEGA_EMAIL }} &&
                     MEGA_PASSWORD = ${{ secrets.MEGA_PASSWORD }} &&
-                    export GETIMG_API_KEY &&
-                    export BOT_TOKEN &&
-                    export MEGA_EMAIL &&
-                    export MEGA_PASSWORD &&
+                    export $GETIMG_API_KEY &&
+                    export $BOT_TOKEN &&
+                    export $MEGA_EMAIL &&
+                    export $MEGA_PASSWORD &&
                     docker compose pull && docker compose up -d && 
                     exit"
             - name: cleanup
